<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.boarding.vpscreens.FragmentScreen2"
    android:background="@drawable/ic_abstract_envelope"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/screen2img"
        android:layout_width="257dp"
        android:layout_height="266dp"
        android:src="@drawable/ic_save_svgrepo_com2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/screen2title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen2_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen2img"
        app:layout_constraintVertical_bias="0.239" />

    <TextView
        android:id="@+id/screen2desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen2_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen2title"
        app:layout_constraintVertical_bias="0.069"
        android:textAlignment="center"
        android:textSize="18sp"
        />


    <Button
        android:id="@+id/screen2finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/white"

        android:text="@string/finish"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen2desc"
        app:layout_constraintVertical_bias="0.87" />

</androidx.constraintlayout.widget.ConstraintLayout>